# Contest-Reminder-Bot

./: .gitignore  .replit  README.md  main.py  pyproject.toml  requirements.txt
DebugFiles/: localKey.txt
cogs/: Contest.py
cogs/Utils/: constants.py  contests.py
